home page added, form builder added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,3 +53,18 @@ body {
 .slide-out-right {
   animation: slideOutRight 0.7s forwards;
 }
+
+/* Line clamp utilities */
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
